# emscripten-fs-example

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.js  package-lock.json  package.json  test.js
lib/: example.js
src/: main.c  post.js  pre.js
